# construct-iq

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
construct_iq/: config.py  database.py  embedder.py  llm.py  storage.py
construct_iq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
construct_iq/ui/: checklist.py  documents.py  expenses.py  notes.py  phases.py  projects.py  qa.py
tests/: test_database.py  test_storage.py
