[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["construct_iq*"]

[project]
name = "construct-iq"
version = "1.0.0"
description = "AI-powered construction project management with document Q&A"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.57.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "ollama>=0.2.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0"]

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# ── ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]

# ── mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
